fixed layout problem where team ID and match # didn't line up with the boxes below

--- a/web/pages/static/style.css
+++ b/web/pages/static/style.css
@@ -18,14 +18,15 @@
   .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   }
   /*for header to put team id and etc. in a row*/
   .container-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: row;
+    margin-bottom: 60px;
   }
 
   .teamColor-cont {
@@ -34,16 +35,18 @@
     border-radius: 30px;
   }
 
-  /*container for header*/
-  .header-cont {
+  .header-left {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    align-content: center;
-    width: 47%;
-    margin-bottom: 60px;
-    border-radius: 30px;
+    width: 300px;
+  }
+
+  .header-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
   }
 
   /*makes font size bigger for titles*/
@@ -58,7 +61,6 @@
       width:370px;
       font-size: 20px;
       color: #ffffff;
-      margin-left: 15%;
       background-color:#EF233C;
       border-radius: 30px;
   }
@@ -73,15 +75,14 @@
 
 
   .right-cont {
-      display: flex;
-      flex-direction: column;
-      width:370px;
-      font-size: 20px;
-      color: #ffffff;
-      text-align: center;
-      margin-right: 15%;
-      background-color: #EF233C;
-      border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    width:370px;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    background-color: #EF233C;
+    border-radius: 30px;
   }
 
   .center-cont {
